# summer

./: .ghcid  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  extensible-sums.cabal  release.nix  summer.cabal
.github/workflows/: haskell.yml
src/: Test.hs
src/Data/: Database.hs  ForAll.hs  Prodder.hs  Summer.hs
test/: Test.hs
