cabal-version:       >=1.10
name:                summer
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Summer
  build-depends:       base >=4.12 && <4.15
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -O0
